# LLM_Project

./: Dockerfile  README.md  pyproject.toml  requirements.txt
doc/: API_REFERENCE.md  INSTALLATION_GUIDE.md  README.md
src/: app.py  doctors_voice.py  llm_brain.py  patient_voice.py  utils.py
test/: test_doctors_voice.py  test_llm_brain.py  test_patient_voice.py
